--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aztec/dev-utils": "0.12.2",
     "@aztec/protocol": "0.9.1",
     "@aztec/secp256k1": "1.0.1",
+    "@toruslabs/torus-embed": "^1.1.0",
     "aztec.js": "0.11.0",
     "dotenv": "^8.0.0",
     "ethereum-ens": "^0.7.7",
